@@ -3,6 +3,7 @@
     its meta-methods
 * added some API testing to tests.py
 * applied OSX setup.py patch by Atul Varma
+* fixed to issue #14 by Dean
 
 == 1.1 =========================================================================
 * applied patch by Dean Hall to fix several range() bugs
